--- a/index.html
+++ b/index.html
@@ -166,6 +166,8 @@
                 loop: true,
                 spaceBetween: 30,
                 centeredSlides: true,
+                effect: 'fade',
+                speed: 500,
                 autoplay: {
                     delay: 5000,
                     disableOnInteraction: false,
