--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <div class="main-item">
             <h2 class="main-title">{{productTitle.productDetail}}</h2>
             <div class="product-detail">
-                <a class="item-box" href="javascript:" v-for="item in dsy_data.productDetail">
+                <a class="item-box scale-pic" href="javascript:" v-for="item in dsy_data.productDetail">
                     <img class="item-pic" :src="dsy_data.imgSrc+item.img" alt="">
                     <div class="item-info">
                         {{item.desc}}
