--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <p v-for="item in dsy_data.aboutUs">{{item}}</p>
                 </div>
                 <div class="info">
-                    <img class="about-us" src="image/about_us_pic.png" alt="">
+                    <img class="about-us" src="image/a_9.jpg" alt="">
                 </div>
             </div>
         </div>
@@ -117,7 +117,7 @@
             <h2 class="main-title">{{productTitle.contactUs}}</h2>
             <div class="desc">
                 <div class="info-pic">
-                    <img src="image/address.png" alt="">
+                    <img src="image/map.png" alt="">
                 </div>
                 <div class="info-pic">
                     <!-- <img src="image/qr.png" alt="">-->
