--- a/index.html
+++ b/index.html
@@ -67,10 +67,18 @@
             <h2 class="main-title">{{productTitle.aboutUs}}</h2>
             <div class="">
                 <div class="info">
-                    <p v-for="item in dsy_data.aboutUs">{{item}}</p>
+                    <p class="about-us-info" v-for="item in dsy_data.aboutUs">{{item}}</p>
                 </div>
-                <div class="info">
-                    <img class="about-us" src="image/a_9.jpg" alt="">
+
+                <div class="about-us-item">
+                    <img class="about-pic" src="image/about_us_pic.png" alt="">
+                    <div class="about-txt">Roman umbrellasPavilion swingsVehicles three-people Three-rocking chairs</div>
+                </div>
+                <div class="about-us-item">
+                    <div class="about-txt">
+                        Cast aluminum tables and chairs Beach loungePark loungePlastic chairsCasual sofas
+                    </div>
+                    <img class="about-pic" src="image/about_us_pic2.png" alt="">
                 </div>
             </div>
         </div>
