--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <p class="about-us-info" v-for="item in dsy_data.aboutUs">{{item}}</p>
                 </div>
 
-                <div class="about-us-item">
+                <!--<div class="about-us-item">
                     <img class="about-pic" src="image/about_us_pic.png" alt="">
                     <div class="about-txt">Roman umbrellasPavilion swingsVehicles three-people Three-rocking chairs</div>
                 </div>
@@ -79,7 +79,7 @@
                         Cast aluminum tables and chairs Beach loungePark loungePlastic chairsCasual sofas
                     </div>
                     <img class="about-pic" src="image/about_us_pic2.png" alt="">
-                </div>
+                </div>-->
             </div>
         </div>
         <!--  产品展示  -->
