--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 </head>
 <body>
 <div id="app" v-cloak>
+    <div id="top"></div>
+    <a id="to-top" href="#top">TOP</a>
     <!--  头部  -->
     <div class="header-box">
         <div id="header" class="w">
